kubernetes/php.yml
apiVersion: v1
kind: Service
metadata:
    name: php

spec:
    type: ClusterIP
    selector:
        app: php
    ports:
        - protocol: TCP
          port: 9000
          targetPort: 9000

---

apiVersion: apps/v1
kind: Deployment
metadata:
    name: php

spec:
    replicas: 2
    selector:
        matchLabels:
            app: php

    template:
        metadata:
            labels:
                app: php

        spec:
            containers:
                -
                    name: php
                    image: pavl0vsk1/totp-php:1.1
                    ports:
                        -
                            containerPort: 9000
                    volumeMounts:
                        -
                            name: app-env
                            mountPath: /var/www/ib-proekt.com/.env
                            subPath: .env

            volumes:
                -
                    name: app-env
                    secret:
                        secretName: app-env
